--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <p class="label1">Student ID: S3930688</p>
     <p class="label1">S3930688@student.rmit.edu.au</p>
 
-    <img src="Images/PhotoOfMe.jpg">
+    <img src="docs/assets/Pictures/PhotoOfMe.jpg">
     <div id = "Introducing Myself">
       <h1>Introducing Myself</h1>
 
@@ -142,7 +142,7 @@
 
           <p class="paragraph">Here is a link to my dream career, as a algorithmic trader: <a href="https://blog.quantinsti.com/making-career-algorithmic-trading/">https://blog.quantinsti.com/making-career-algorithmic-trading/</a></p>
       
-          <img src="Images/Screenshot.png" class="img1">
+          <img src="docs/assets/Pictures/Screenshot.png" class="img1">
 
           <p class="paragraph">Now, as you may have guessed so far, my dream is to one day become an algorithmic trader for large trading institutions. This job is to write the programs which assist financial trading insitutions in creating trade automations.</p>
 
